fix: add file path

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   </head>
   <body>
     <div class="container">
-      <a class="title" href="/">My e-shop</a>
+      <a class="title" href="/E-shop/">My e-shop</a>
       <div class="basket">
         <p class="basket-content">0</p>
-        <img class="basket-button" src="/img/basket.png" alt="basket" />
+        <img class="basket-button" src="img/basket.png" alt="basket" />
       </div>
       <header class="header-content">
         <div class="select-category">
